solve front end validations alignment issue

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -82,3 +82,6 @@
   cursor: pointer;
 margin-left: 0px;
 }
+#errStatus{
+  margin-left: 155px;
+}
